# car-mechanic-cli

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: check.rs  diagnose.rs  explain.rs  list.rs  main.rs  patterns.rs  risk.rs  search.rs  tests.rs  triage.rs  types.rs  upstream_refs.rs
